Added $ before the start of the comment
Added $ at the stating of the comment to make whole document in sequence.

--- a/modules/dr-hosted-cluster-within-aws-region-restore.adoc
+++ b/modules/dr-hosted-cluster-within-aws-region-restore.adoc
@@ -123,7 +123,7 @@ fi
 +
 [source,terminal]
 ----
-oc apply -f ${BACKUP_DIR}/namespaces/${HC_CLUSTER_NS}/np-*
+$ oc apply -f ${BACKUP_DIR}/namespaces/${HC_CLUSTER_NS}/np-*
 ----
 
 .Verification
