--- a/modules/dr-hosted-cluster-within-aws-region-delete.adoc
+++ b/modules/dr-hosted-cluster-within-aws-region-delete.adoc
@@ -31,7 +31,7 @@ As a workaround, update the value of the `spec.persistentVolumeClaimRetentionPol
 [source,terminal]
 ----
 # Just in case
-export KUBECONFIG=${MGMT_KUBECONFIG}
+$ export KUBECONFIG=${MGMT_KUBECONFIG}
 
 # Scale down deployments
 $ oc scale deployment -n ${HC_CLUSTER_NS}-${HC_CLUSTER_NAME} --replicas=0 --all
@@ -68,7 +68,7 @@ $ oc delete machineset -n ${HC_CLUSTER_NS}-${HC_CLUSTER_NAME} --all || true
 [source,terminal]
 ----
 # Cluster
-C_NAME=$(oc get cluster -n ${HC_CLUSTER_NS}-${HC_CLUSTER_NAME} -o name)
+$ C_NAME=$(oc get cluster -n ${HC_CLUSTER_NS}-${HC_CLUSTER_NAME} -o name)
 $ oc patch -n ${HC_CLUSTER_NS}-${HC_CLUSTER_NAME} ${C_NAME} --type=json --patch='[ { "op":"remove", "path": "/metadata/finalizers" }]'
 $ oc delete cluster.cluster.x-k8s.io -n ${HC_CLUSTER_NS}-${HC_CLUSTER_NAME} --all
 ----
@@ -112,7 +112,7 @@ $ oc delete ns ${HC_CLUSTER_NS} || true
 [source,terminal]
 ----
 # Validations
-export KUBECONFIG=${MGMT2_KUBECONFIG}
+$ export KUBECONFIG=${MGMT2_KUBECONFIG}
 
 $ oc get hc -n ${HC_CLUSTER_NS}
 $ oc get np -n ${HC_CLUSTER_NS}
@@ -120,7 +120,7 @@ $ oc get pod -n ${HC_CLUSTER_NS}-${HC_CLUSTER_NAME}
 $ oc get machines -n ${HC_CLUSTER_NS}-${HC_CLUSTER_NAME}
 
 # Inside the HostedCluster
-export KUBECONFIG=${HC_KUBECONFIG}
+$ export KUBECONFIG=${HC_KUBECONFIG}
 $ oc get clusterversion
 $ oc get nodes
 ----
