--- a/modules/dr-hosted-cluster-within-aws-region-restore.adoc
+++ b/modules/dr-hosted-cluster-within-aws-region-restore.adoc
@@ -24,8 +24,8 @@ Ensure that the `kubeconfig` file of the destination management cluster is place
 [source,terminal]
 ----
 # Just in case
-export KUBECONFIG=${MGMT2_KUBECONFIG}
-BACKUP_DIR=${HC_CLUSTER_DIR}/backup
+$ export KUBECONFIG=${MGMT2_KUBECONFIG}
+$ BACKUP_DIR=${HC_CLUSTER_DIR}/backup
 
 # Namespace deletion in the destination Management cluster
 $ oc delete ns ${HC_CLUSTER_NS} || true
