[OCPBUGS-42560] Update command to add the configmap in nodepool
[OCPBUGS-42560] Update command to add the configmap in nodepool

--- a/modules/configuring-node-pools-for-hcp.adoc
+++ b/modules/configuring-node-pools-for-hcp.adoc
@@ -50,11 +50,20 @@ data:
 +
 [source,yaml]
 ----
-spec:
-  config:
-    - name: ${CONFIGMAP_NAME}
+$ oc edit nodepool <nodepool_name> --namespace <hosted_cluster_namespace>
 ----
-
-//.Verification
-
-// Does the user need to do anything to verify that the procedure was successful?
+.Example output
++
+[source,yaml]
+----
+apiVersion: hypershift.openshift.io/v1alpha1
+kind: NodePool
+metadata:
+# ...
+  name: nodepool-1
+  namespace: clusters
+# ...
+  spec:
+    config:
+      - name: ${CONFIGMAP_NAME}
+# ...
