add backup statement to the procedure

--- a/modules/rotating-certificate-authority.adoc
+++ b/modules/rotating-certificate-authority.adoc
@@ -10,6 +10,13 @@ Rotate the `etcd` certificate before it expires.
 
 .Procedure
 
+. Make a backup copy of the current signer certificate by running the following command:
++
+[source,terminal]
+----
+$ oc get secret -n openshift-etcd etcd-signer -oyaml > signer_backup_secret.yaml
+----
+
 . Verify the remaining lifetime of the new signer certificate by running the following command:
 +
 [source,terminal]
