--- a/installing/disconnected_install/installing-mirroring-installation-images.adoc
+++ b/installing/disconnected_install/installing-mirroring-installation-images.adoc
@@ -40,8 +40,7 @@ include::modules/installation-about-mirror-registry.adoc[leveloffset=+1]
 
 .Additional information
 
-For information about viewing the CRI-O logs to view the image source, see xref:../../installing/validation_and_troubleshooting
-/validating-an-installation.adoc#viewing-the-image-pull-source_validating-an-installation[Viewing the image pull source].
+For information about viewing the CRI-O logs to view the image source, see xref:../../installing/validation_and_troubleshooting/validating-an-installation.adoc#viewing-the-image-pull-source_validating-an-installation[Viewing the image pull source].
 
 [id="installing-preparing-mirror"]
 == Preparing your mirror host
