--- a/installing/installing_alibaba/installing-alibaba-network-customizations.adoc
+++ b/installing/installing_alibaba/installing-alibaba-network-customizations.adoc
@@ -75,8 +75,7 @@ include::modules/cluster-telemetry.adoc[leveloffset=+1]
 [id="next-steps_installing-alibaba-network-customizations"]
 == Next steps
 
-* xref:../../installing/validation_and_troubleshooting
-/validating-an-installation.adoc#validating-an-installation[Validate an installation].
+* xref:../../installing/validation_and_troubleshooting/validating-an-installation.adoc#validating-an-installation[Validate an installation].
 * xref:../../post_installation_configuration/cluster-tasks.adoc#available_cluster_customizations[Customize your cluster].
 * If necessary, you can xref:../../support/remote_health_monitoring/opting-out-of-remote-health-reporting.adoc#opting-out-remote-health-reporting_opting-out-remote-health-reporting[opt out of remote health reporting].
 //Given that manual mode is required to install on Alibaba Cloud, I do not believe this xref is necessary.
