--- a/installing/overview/index.adoc
+++ b/installing/overview/index.adoc
@@ -27,8 +27,7 @@ include::modules/ipi-verifying-nodes-after-installation.adoc[leveloffset=+2]
 
 * xref:../../installing/installing_bare_metal_ipi/ipi-install-installing-a-cluster.adoc#ipi-install-following-the-progress-of-the-installation_ipi-install-installing-a-cluster[Following the progress of the installation]
 
-* xref:../../installing/validation_and_troubleshooting
-/validating-an-installation.adoc#validating-an-installation[Validating an installation]
+* xref:../../installing/validation_and_troubleshooting/validating-an-installation.adoc#validating-an-installation[Validating an installation]
 
 * xref:../../installing/installing_with_agent_based_installer/preparing-to-install-with-agent-based-installer.adoc#preparing-to-install-with-agent-based-installer[Agent-based Installer]
 
