--- a/modules/cert-manager-configure-cloud-credentials-gcp-non-sts.adoc
+++ b/modules/cert-manager-configure-cloud-credentials-gcp-non-sts.adoc
@@ -10,7 +10,7 @@ To configure the cloud credentials for the {cert-manager-operator} on a GCP clus
 
 .Prerequisites
 
-* You have installed the {cert-manager-operator} 1.11.1 or later.
+* You have installed version 1.11.1 or later of the {cert-manager-operator}.
 * You have configured the Cloud Credential Operator to operate in _mint_ or _passthrough_ mode.
 
 .Procedure
