OSDOCS#12218: Add a net reqs table from ACM to OCP

--- a/modules/hcp-requirements-platform-version.adoc
+++ b/modules/hcp-requirements-platform-version.adoc
@@ -3,7 +3,7 @@
 
 :_mod-docs-content-type: CONCEPT
 [id="hcp-requirements-platform-version_{context}"]
-= Platform and version requirements for {hcp-capital}
+= Platform, version, and network requirements for {hcp}
 
 The following table indicates which {product-title} versions are supported for each platform. In the table, Hosting {product-title} version refers to the {product-title} version where the {mce-short} is enabled:
 
@@ -35,4 +35,33 @@ The following table indicates which {product-title} versions are supported for e
 |Non-bare metal agent machines
 |4.16
 |4.16 (only)
+|===
+
+
+When you use {hcp}, the `HypershiftDeployment` resource must have connectivity to the endpoints listed in the following table:
+
+.{hcp-capital} network requirements 
+[cols="3",options="header"]
+|===
+| Direction | Connection | Port (if specified)
+
+| Outbound
+| {product-title} control plane and worker nodes
+|
+
+| Outbound
+| For hosted clusters on {aws-first} only: Outbound connection to {aws-short} API and S3 API
+|
+
+| Outbound
+| For hosted clusters on Microsoft Azure cloud services only: Outbound connection to Azure API
+|
+
+| Outbound
+| {product-title} image repositories that store the ISO images of the coreOS and the image registry for {product-title} pods
+|
+
+| Outbound
+| Local API client of the klusterlet on the hosting cluster communicates with the API of the hosted cluster
+|
 |===
