SRVCOM-3248-Release-Notes-1.34: Added the release notes for 1.34 serverless

--- a/modules/serverless-deprecated-removed-features.adoc
+++ b/modules/serverless-deprecated-removed-features.adoc
@@ -11,25 +11,15 @@ Some features that were Generally Available (GA) or a Technology Preview (TP) in
 For the most recent list of major functionality deprecated and removed within {ServerlessProductName}, refer to the following table:
 
 .Deprecated and removed features tracker
-[cols="3,1,1,1,1,1,1,1",options="header"]
+[cols="3,1,1,1,1,1,1",options="header"]
 |====
-|Feature |1.27|1.28|1.29|1.30|1.31|1.32|1.33
-
-|Serving TLS for internal traffic
-|-
-|-
-|-
-|-
-|-
-|Removed
-|Removed
+|Feature |1.29|1.30|1.31|1.32|1.33|1.34
 
 |EventTypes `v1beta1` API
 |-
 |-
 |-
-|-
-|-
+|Deprecated
 |Deprecated
 |Deprecated
 
@@ -37,8 +27,7 @@ For the most recent list of major functionality deprecated and removed within {S
 |-
 |-
 |-
-|-
-|-
+|Removed
 |Removed
 |Removed
 
@@ -46,22 +35,19 @@ For the most recent list of major functionality deprecated and removed within {S
 |-
 |-
 |-
-|-
-|-
+|Deprecated
 |Deprecated
 |Deprecated
 
 |`NamespacedKafka` annotation
 |-
-|-
-|-
+|Deprecated
 |Deprecated
 |Deprecated
 |Deprecated
 |Deprecated
 
 |`enable-secret-informer-filtering` annotation
-|-
 |Deprecated
 |Deprecated
 |Deprecated
@@ -70,8 +56,7 @@ For the most recent list of major functionality deprecated and removed within {S
 |Deprecated
 
 |Serving and Eventing `v1alpha1` API
-|Deprecated
-|Deprecated
+|Removed
 |Removed
 |Removed
 |Removed
@@ -85,10 +70,8 @@ For the most recent list of major functionality deprecated and removed within {S
 |Removed
 |Removed
 |Removed
-|Removed
 
 |`KafkaBinding` API
-|Removed
 |Removed
 |Removed
 |Removed
