--- a/modules/serverless-tech-preview-features.adoc
+++ b/modules/serverless-tech-preview-features.adoc
@@ -13,40 +13,50 @@ The following table provides information about which {ServerlessProductName} fea
 .Generally Available and Technology Preview features tracker
 [cols="2,1,1,1",options="header"]
 |====
-|Feature |1.31|1.32|1.33
+|Feature |1.32|1.33|1.34
+
+|Eventing Transport encryption
+|-
+|-
+|TP
+
+|Serving Transport encryption
+|-
+|-
+|TP
 
 |OpenShift Serverless Logic
 |TP
-|TP
+|GA
 |GA
 
 |ARM64 support
 |-
-|-
+|TP
 |TP
 
 |Custom Metrics Autoscaler Operator (KEDA)
 |-
-|-
+|TP
 |TP
 
 |kn event plugin
-|-
+|TP
 |TP
 |TP
 
 |Pipelines-as-code
-|-
+|TP
 |TP
 |TP
 
 |`new-trigger-filters`
-|-
+|TP
 |TP
 |TP
 
 |Go function using S2I builder
-|-
+|TP
 |TP
 |TP
 
@@ -62,8 +72,8 @@ The following table provides information about which {ServerlessProductName} fea
 
 |Serverless Logic
 |TP
-|TP
-|TP
+|GA
+|GA
 
 |Overriding `liveness` and `readiness` in functions
 |GA
