--- a/modules/adding-node-iso-yaml.adoc
+++ b/modules/adding-node-iso-yaml.adoc
@@ -89,7 +89,7 @@ The asset directory is your current directory, unless you specified a different 
 +
 [source,terminal]
 ----
-$ oc adm node-image monitor <ip_addresses>
+$ oc adm node-image monitor --ip-addresses <ip_addresses>
 ----
 +
 where:
