--- a/modules/otel-troubleshoot-instrumentation.adoc
+++ b/modules/otel-troubleshoot-instrumentation.adoc
@@ -10,16 +10,34 @@ You can troubleshoot instrumentation issues as follows.
 
 .Procedure
 
-== Ensure the Instrumentation was injected properly in your workload
+== Troubleshooting instrumentation injection into your workload
 
-. Check the instrumentation object is created:
+. Run the following command to verify that the instrumentation object was successfully created:
 +
 [source,console]
 ----
 oc get instrumentation -n <your-project>
 ----
 
-. Verify that the resources were deployed in the correct order
+. Run the following command to verify that the `opentelemetry-auto-instrumentation`` init-container successfully started:
++
+[source,console]
+----
+oc get events -n <workload_project> # <1>
+----
+<1> The namespace where instrumentation is injected for workloads.
++
+.Example output
+[source,console]
+----
+... Created container opentelemetry-auto-instrumentation
+... Started container opentelemetry-auto-instrumentation
+----
++
+** If the output confirms that the init-container successfully started, then (this means that...)
+** If these messages are missing, then there was an issue while injecting the auto-instrumentation.
++
+Verify that the resources were deployed in the correct order
 +
 Deploy the Instrumentation resource before the application to ensure auto-instrumentation works correctly.
 
@@ -27,35 +45,18 @@ When the pod starts, the operator checks for the annotation to know if it needs 
 
 If the Instrumentation resource is not available when the application is deployed, the operator will not inject the auto-instrumentation. When you want to update the instrumentation settings, you need to delete the instrumentation object and redeploy the application.
 
-To verify that the `opentelemetry-auto-instrumentation`` init-container has successfully started, execute the following command:
-
-[source,console]
-----
-oc get events -n <your-project>
-----
-
-You should see something like this:
-
-[source,console]
-----
-... Created container opentelemetry-auto-instrumentation
-... Started container opentelemetry-auto-instrumentation
-----
-
-If those messages are missing, then it means that was an issue while injecting the auto-instrumentation.
-
-. Inspect for the operator logs for instrumentation errors:
+. Run the following commant to inspect the operator logs for instrumentation errors:
 +
 [source,console]
 ----
 oc logs -l app.kubernetes.io/name=opentelemetry-operator --container manager -n openshift-opentelemetry-operator --follow
 ----
 
-. Confirm that the application pods you want to instrument are labeled correctly and the appropriate auto-instrumentation settings have been applied. For example, if you are instrumenting a Python application, you can check that the pods have the `instrumentation.opentelemetry.io/inject-python='true'` annotation:
+. Confirm that the application pods you want to instrument are labeled correctly and the appropriate auto-instrumentation settings have been applied. For example, if you are instrumenting a Python application, you can run the following command to check that the pods have the `instrumentation.opentelemetry.io/inject-python='true'` annotation:
 +
 [source,console]
 ----
-oc get pods -n <your-project> -o jsonpath='{range .items[?(@.metadata.annotations["instrumentation.opentelemetry.io/inject-python"]=="true")]}{.metadata.name}{"\n"}{end}'
+oc get pods -n <workload_project> -o jsonpath='{range .items[?(@.metadata.annotations["instrumentation.opentelemetry.io/inject-python"]=="true")]}{.metadata.name}{"\n"}{end}'
 ----
 
 You should double-check the annotation applied to the instrumentation object is the correct one for the language you are instrumenting. If there are multiple instrumentations in the same namespace, you should set its name in the annotation. Also, if the Instrumentation object is in a different namespace, you need to specify it in the annotation. You can find the accepted values in the link:otel-instrumentation.html["OpenTelemetry instrumentation configuration options"] section.
@@ -63,21 +64,22 @@ You should double-check the annotation applied to the instrumentation object is 
 When defining a Deployment, remember that annotations can be added in either {{spec.metadata.annotations}} or {{spec.template.metadata.annotations}}. Ensure that the auto-instrumentation annotation is added to {{spec.template.metadata.annotations}}.
 
 
-== Check the instrumentation libraries are generating telemetry data
-. Verify the endpoint that the instrumentation is transmitting data to:
+== Troubleshooting telemetry data generation by the instrumentation libraries
+
+. Verify that the instrumentation is transmitting data to the correct endpoint:
 +
 [source,console]
 ----
-oc get instrumentation <instrumentation-name> -n <your-project> -o jsonpath='{.spec.endpoint}'
+oc get instrumentation <instrumentation_name> -n <workload_project> -o jsonpath='{.spec.endpoint}'
 ----
 +
-By default, the endpoint is `http://localhost:4317`. This will work if you deployed the OpenTelemetry Collector as a sidecar container in your application pod. If you are using a different endpoint, you can update it by editing the instrumentation object and redeploying your application.
+The default endpoint `http://localhost:4317` for the instrumentation object is only applicable to a Collector instance that is deployed as a sidecar in your application pod. So if you find that you are using an incorrect endpoint, you can correct it by editing the instrumentation object and redeploying your application.
 
 . Inspect your application logs for error messages that might suggest that the instrumentation is malfunctioning:
 +
 [source,console]
 ----
-oc logs <application-pod> -n <your-project>
+oc logs <application-pod> -n <workload_project>
 ----
 +
 Some common errors include:
