--- a/modules/scale-down-data-plane.adoc
+++ b/modules/scale-down-data-plane.adoc
@@ -33,7 +33,7 @@ $ oc get nodepool --namespace <HOSTED_CLUSTER_NAMESPACE>
 +
 [source,terminal]
 ----
-$ oc edit NodePool <nodepool> -o yaml --namespace <HOSTED_CLUSTER_NAMESPACE>
+$ oc edit nodepool <nodepool_name>  --namespace <hosted_cluster_namespace>
 ----
 +
 .Example output
