CNV#36328: RN - custom ns for golden images

--- a/virt/release_notes/virt-4-17-release-notes.adoc
+++ b/virt/release_notes/virt-4-17-release-notes.adoc
@@ -68,6 +68,9 @@ This release adds new features and enhancements related to the following compone
 //CNV-39964 GA: inferFromVolume
 * The `inferFromVolume` attribute is now supported for use with imported container disks. When requested, {VirtProductName} can copy the labels `instancetype.kubevirt.io/default-instancetype` and `instancetype.kubevirt.io/default-preference` from a source container disk to the boot volume of a new VM.
 
+//CNV-36328
+* You can now select a custom namespace for Red Hat golden images instead of using the default `openshift-virtualization-os-images` namespace. By using a custom namespace, cluster administrators can restrict user access to the default boot sources. To update this setting by using the web console, go to *Virtualization* -> *Overview* -> *Settings* -> *Cluster* -> *General settings* -> *Bootable volumes project*.
+
 [id="virt-4-17-virtualization"]
 === Virtualization
 
