OCPBUGS-42773:updates RN with masquerade subnet

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -785,6 +785,10 @@ You can now configure `linuxptp` services as a grandmaster clock (T-GM) for dual
 
 The host system clock is synchronized from the NIC that is connected to the Global Navigation Satellite Systems (GNSS) time source. The second NIC is synced to the 1PPS timing output provided by the NIC that is connected to GNSS. For more information, see xref:../networking/ptp/configuring-ptp.adoc#configuring-linuxptp-services-as-grandmaster-clock-dual-nic_configuring-ptp[Configuring linuxptp services as a grandmaster clock for dual E810 NICs].
 
+[id="ocp-4.17-masquerade-subnet-change_{context}"]
+==== Masquerade subnet change for new clusters
+For {product-title} 4.17 and later versions, clusters use 169.254.0.0/17 for IPv4 and fd69::/112 for IPv6 as the default masquerade subnet. These ranges should be avoided by users. For upgraded clusters, there is no change to the default masquerade subnet.
+
 [id="ocp-4-17-sr-iov-network-metrics-exporter_{context}"]
 ==== Enabling the SR-IOV network metrics exporter
 
