OLS-931: Document OLS configuration for RHELAI as the provider

--- a/modules/ols-creating-lightspeed-custom-resource-file-using-cli.adoc
+++ b/modules/ols-creating-lightspeed-custom-resource-file-using-cli.adoc
@@ -40,6 +40,30 @@ spec:
     defaultProvider: myOpenai
 ----
 +
+.{rhelai} CR file
+[source,yaml,subs="attributes,verbatim"]
+----
+apiVersion: ols.openshift.io/v1alpha1
+kind: OLSConfig
+metadata:
+  name: cluster
+  namespace: openshift-lightspeed
+spec:
+  llm:
+    providers:
+    - credentialsSecretRef:
+        name: openai-api-keys
+      models:
+      - name: models/granite-7b-redhat-lab
+      name: rhelai
+      type: rhelai_vllm
+      url: <URL> <1>
+  ols:
+    defaultProvider: rhelai
+    defaultModel: models/granite-7b-redhat-lab
+----
+<1> The URL endpoint must end with `v1` to be valid. For example, `\https://http://3.23.103.8:8000/v1`. 
++
 .{rhoai} CR file
 [source,yaml,subs="attributes,verbatim"]
 ----
@@ -56,7 +80,7 @@ spec:
       models:
       - name: granite-8b-code-instruct-128k
       name: red_hat_openshift_ai
-      type: rohai_vllm 
+      type: rhoai_vllm 
       url: <url> <1>
   ols:
     defaultProvider: red_hat_openshift_ai
