OLS-931: Document OLS configuration for RHELAI as the provider

--- a/_attributes/common-attributes.adoc
+++ b/_attributes/common-attributes.adoc
@@ -30,7 +30,7 @@
 :ols-offical: Red Hat OpenShift Lightspeed
 :ols-long: OpenShift Lightspeed
 :ols-short: Lightspeed
-:ols-release: Developer Preview
+:ols-release: Technology Preview
 //LLM
 :openai: OpenAI
 :azure-openai: Microsoft Azure OpenAI
