Add 4.17 RN for OLM dep UI

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -634,6 +634,13 @@ For release notes about {olmv1} in {product-title} 4.17 and later, including its
 
 This "Operator lifecycle" section will continue to document new features and enhancements for {olmv0} in future releases.
 
+[id="ocp-4-17-olm-dep-ui_{context}"]
+==== Web console warnings for deprecated Operators
+
+When deprecated packages, channels, or versions are defined for Operators in a catalog, the {product-title} web console now displays warning badges for the affected elements of the Operator, including any custom deprecation messages, on both the pre- and post-installation pages of the OperatorHub.
+
+For more information on the deprecation schema for Operator catalogs, see  see xref:../operators/understanding/olm-packaging-format.adoc#olm-deprecations-schema_olm-packaging-format[Operator Framework packaging format → Schemas → olm.deprecations schema].
+
 [id="ocp-4-17-osdk_{context}"]
 === Operator development
 
