OSDOCS#12271: Correct the HCP RN TP table

--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -265,7 +265,7 @@ Starting in {product-title} 4.14, Extended Update Support (EUS) is extended to t
 |Supported
 |Supported
 
-|Hosted control planes (Technology Preview)
+|{hcp-capital}
 |Supported
 |Supported
 
@@ -2573,39 +2573,49 @@ In the following tables, features are marked with the following statuses:
 |====
 
 [discrete]
-=== Hosted control planes Technology Preview features
+=== {hcp-capital} Technology Preview features
 
-.Hosted control planes Technology Preview tracker
+.{hcp-capital} Technology Preview tracker
 [cols="4,1,1,1",options="header"]
 |====
 |Feature |4.15 |4.16 |4.17
 
-|Hosted control planes for {product-title} on {aws-first}
+|{hcp-capital} for {product-title} on {aws-first}
+|Technology Preview
+|General Availability
+|General Availability
+
+|{hcp-capital} for {product-title} on bare metal
+|General Availability
+|General Availability
+|General Availability
+
+|{hcp-capital} for {product-title} on {VirtProductName}
+|General Availability
+|General Availability
+|General Availability
+
+|{hcp-capital} for {product-title} using non-bare metal agent machines
 |Technology Preview
 |Technology Preview
 |Technology Preview
 
-|Hosted control planes for {product-title} using non-bare metal agent machines
+|{hcp-capital} for an ARM64 {product-title} cluster on {aws-full}
+|Technology Preview
+|Technology Preview
+|General Availability
+
+|{hcp-capital} for {product-title} on {ibm-power-title}
 |Technology Preview
 |Technology Preview
 |Technology Preview
 
-|Hosted control planes for an ARM64 {product-title} cluster on {aws-full}
+|{hcp-capital} for {product-title} on {ibm-z-title}
 |Technology Preview
 |Technology Preview
 |Technology Preview
 
-|Hosted control planes for {product-title} on {ibm-power-title}
-|Technology Preview
-|Technology Preview
-|Technology Preview
-
-|Hosted control planes for {product-title} on {ibm-z-title}
-|Technology Preview
-|Technology Preview
-|Technology Preview
-
-|Hosted control planes for {product-title} on {rh-openstack}
+|{hcp-capital} for {product-title} on {rh-openstack}
 |Not Available
 |Not Available
 |Developer Preview
