[SRVOCF-617] Update installing func-s2i and func-deploy tasks

--- a/modules/odc-creating-functions.adoc
+++ b/modules/odc-creating-functions.adoc
@@ -15,22 +15,16 @@ You can create a function from a Git repository by using the *Developer* perspec
 ** Install the {pipelines-shortname} Operator on the cluster.
 ** Create the following pipeline tasks so that they are available for all namespaces on the cluster:
 +
-.func-s2i task
+.func-s2i and func-deploy tasks
 [source,terminal]
 ----
-$ oc apply -f https://raw.githubusercontent.com/openshift-knative/kn-plugin-func/serverless-1.33/pkg/pipelines/resources/tekton/task/func-s2i/0.1/func-s2i.yaml
-----
-+
-.func-deploy task
-[source,terminal]
-----
-$ oc apply -f https://raw.githubusercontent.com/openshift-knative/kn-plugin-func/serverless-1.33/pkg/pipelines/resources/tekton/task/func-deploy/0.1/func-deploy.yaml
+$ kn func tkn-tasks | oc apply -f -
 ----
 +
 .Node.js function
 [source,terminal]
 ----
-$ oc apply -f https://raw.githubusercontent.com/openshift-knative/kn-plugin-func/serverless-1.33/pkg/pipelines/resources/tekton/pipeline/dev-console/0.1/nodejs-pipeline.yaml
+$ oc apply -f https://raw.githubusercontent.com/openshift-knative/kn-plugin-func/serverless-1.34/pkg/pipelines/resources/tekton/pipeline/dev-console/0.1/nodejs-pipeline.yaml
 ----
 
 * You must log into the {ocp-product-title} web console.
